--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render 'layouts/navbar' %>
-<%= yield %>
-<%= render 'layouts/footer' %>
+<div class="container-fluid">
+  <%= render 'layouts/navbar' %>
+  <%= notice_message %>
+  <%= yield %>
+  <%= render 'layouts/footer' %>
+</div>
 </body>
 </html>
