--- a/app/views/admin/meetups/new.html.erb
+++ b/app/views/admin/meetups/new.html.erb
@@ -1,5 +1,7 @@
 <h1 class="text-center">開始建立您的聚會吧!</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', admin_meetups_path %>
+<div class="row">
+  <div class="col-md-offset-4 col-md-4">
+    <%= render 'form' %>
+    <%= link_to 'Back', admin_meetups_path %>
+  </div>
+</div>
