--- a/app/views/admin/meetups/_form.html.erb
+++ b/app/views/admin/meetups/_form.html.erb
@@ -6,6 +6,7 @@
     <%= f.input :location, :label => "所在地", :input_html => {:class => "form-control"} %></br>
     <%= f.input :day, :label => "例行日", :input_html => {:class => "form-control"} %></br>
     <%= f.input :called, :label => "參加者別稱", :input_html => {:class => "form-control"} %></br>
+    <%= f.input :cover, as: :file %>
   </div>
   <%= f.submit "建立聚會", :class => "btn btn-success" %>
 <% end %>
