--- a/app/views/meetups/index.html.erb
+++ b/app/views/meetups/index.html.erb
@@ -1,23 +1,21 @@
-<h1>Listing meetups</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<h1 class="text-center">快來找適合你的聚會!</h1>
+<div class="row">
+  <div class="col-md-offset-1 col-md-10">
     <% @meetups.each do |meetup| %>
-      <tr>
-        <td><%= link_to 'Show', meetup %></td>
-        <td><%= link_to 'Edit', edit_meetup_path(meetup) %></td>
-        <td><%= link_to 'Destroy', meetup, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <%= link_to meetup_path(meetup) do %>
+            <%= image_tag meetup.cover.url %>
+            <div class="caption">
+              <h3><%= meetup.title %></h3>
+              <p><%= meetup.subtitle %></p>
+              <p><%= meetup.day %></p>
+            </div>
+          <% end %>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
+  </div>
+</div>
 <br>
 
-<%= link_to 'New Meetup', new_meetup_path %>
