--- a/app/views/meetups/index.html.erb
+++ b/app/views/meetups/index.html.erb
@@ -1,6 +1,12 @@
 <h1 class="text-center">快來找適合你的聚會!</h1>
 <div class="row">
   <div class="col-md-offset-1 col-md-10">
+    <div>
+      <span>分類</span>
+      <% @categories.each do |category| %>
+        <%= link_to category.title, class: "btn btn-primary" %>
+      <% end %>
+    </div>
     <% @meetups.each do |meetup| %>
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
