add admin_meetup to manage menu, add edit, delete, show events

--- a/app/views/admin/meetups/_form.html.erb
+++ b/app/views/admin/meetups/_form.html.erb
@@ -9,5 +9,5 @@
     <%= f.input :called, :label => "參加者別稱", :input_html => {:class => "form-control"} %></br>
     <%= f.input :cover, as: :file %>
   </div>
-  <%= f.submit "建立聚會", :class => "btn btn-success" %>
+  <%= f.submit "確定", :class => "btn btn-success" %>
 <% end %>
