--- a/app/views/admin/meetups/edit.html.erb
+++ b/app/views/admin/meetups/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing admin_meetup</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @admin_meetup %> |
-<%= link_to 'Back', admin_meetups_path %>
+<h1 class="text-center">編輯聚會</h1>
+<div class="row">
+  <div class="col-md-offset-4 col-md-4">
+    <%= render 'form' %>
+  </div>
+</div>
