--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,23 +1,27 @@
-<h1>Listing events</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @events.each do |event| %>
-      <tr>
-        <td><%= link_to 'Show', event %></td>
-        <td><%= link_to 'Edit', edit_event_path(event) %></td>
-        <td><%= link_to 'Destroy', event, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<h1 class="text-center"><%= @admin_meetup.title %>的活動</h1>
+<div class="row">
+  <br/>
+  <br/>
+  <div class="col-md-offset-1 col-md-10">
+    <%= link_to "新增活動", new_admin_meetup_event_path, class: "btn btn-primary pull-right" %>
+    <br/><br/>
+    <% @admin_events.each do |event| %>
+      <div class="col-sm-6 col-md-4">
+        <div class="thumbnail">
+          <%= link_to meetup_event_path(@meetup, event) do %>
+            <div class="caption">
+              <h3><%= event.title %></h3>
+              <p><%= event.date %></p>
+              <p>
+                <%= link_to "活動", admin_meetup_events_path(meetup), class: "btn btn-default" %>
+                <%= link_to "編輯", edit_admin_meetup_path(meetup), class: "btn btn-default" %>
+                <%= link_to "刪除", admin_meetup_path(meetup), class: "btn btn-danger", method: "delete", data: {confirm: "確認刪除?"} %> 
+              </p>
+            </div>
+          <% end %>
+        </div>
+      </div>
     <% end %>
-  </tbody>
-</table>
-
+  </div>
+</div>
 <br>
-
-<%= link_to 'New Event', new_event_path %>
