--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,6 +24,11 @@
     </div>
     <div id="note">
       <h3>筆記</h3>
+      <% if @note %>
+        <iframe width="100%" height="600px" src="<%= @note.link %>"></iframe>
+      <% else %>
+        <%= link_to "建立筆記", '/auth/google_oauth2', class: "btn btn-primary" %>
+      <% end %>
     </div>
     <div id="photo">
       <h3>照片</h3>
