--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,7 +27,7 @@
       <% if @note %>
         <iframe width="100%" height="600px" src="<%= @note.link %>"></iframe>
       <% else %>
-        <%= link_to "建立筆記", '/auth/google_oauth2', class: "btn btn-primary" %>
+        <%= link_to "建立筆記", open_new_file_admin_meetup_event_path(@meetup, @event), class: "btn btn-primary" %>
       <% end %>
     </div>
     <div id="photo">
