--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -16,6 +16,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><%= link_to "找聚會", find_meetup_path(0) %></li>
         <li><%= link_to "辦聚會", new_admin_meetup_path %></li>
+        <!--
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
@@ -28,19 +29,31 @@
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
+        -->
       </ul>
+      <!--
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
+      -->
       <ul class="nav navbar-nav navbar-right">
         <% if current_user %>
           <li><%= link_to current_user.email %></li>
           <%= render 'layouts/admin_menu' %>
         <% else %>
-          <li><%= link_to "Google", user_omniauth_authorize_path(:google_oauth2) %></li>
+          <li><a style="padding-right: 0px;">用Google一鍵登入></a></li>
+          <li>
+            <%= link_to user_omniauth_authorize_path(:google_oauth2) do %>
+              <%= image_tag 'Google_icon.png', width: "25px", style: "margin-top: -10px;" %>
+            <% end %>
+          </li>
+          <!--
+          <li><%= link_to "登入", new_user_session_path %></li>
+          <li><%= link_to "註冊", new_user_registration_path %></li>
+          -->
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
