add carousel at home page

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,2 +1,2 @@
 <hr>
-<p class="text-center">POWERED BY CJ. davidjuin0519@gmail.com</p>
+<p class="text-center">POWERED BY CJ<br/> davidjuin0519@gmail.com</p>
