--- a/app/views/layouts/_admin_menu.html.erb
+++ b/app/views/layouts/_admin_menu.html.erb
@@ -1,7 +1,7 @@
 <li class="dropdown">
   <a href="#" class="dropdown-toggle" data-toggle="dropdown">管理選單<span class="caret"></span></a>
   <ul class="dropdown-menu" role="menu">
-    <li><%= link_to "個人資訊" %></li>
+    <li><%= link_to "個人資訊", '/info/'+current_user.id.to_s %></li>
     <li><%= link_to "我的聚會", admin_meetups_path %></li>
     <li class="divider"></li>
     <li><%= link_to "登出", destroy_user_session_path, :method => :delete %></li>
