--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -2,12 +2,17 @@
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
     <%= image_tag @meetup.cover.url, style: "width: 100%;" %>
+
     <%= link_to "簡介", anchor: "about" %>
     <%= link_to "成員", anchor: "member" %>
     <%= link_to "活動", anchor: "event" %>
     <%= link_to "筆記", anchor: "note" %>
     <%= link_to "照片", anchor: "photo" %>
-
+    <% if @is_member %>
+      <span class="pull-right">您已加入此聚會</span>
+    <% else %>
+      <%= link_to "加入聚會", add_admin_meetup_path(@meetup), class: "btn btn-primary pull-right" %>
+    <% end %>
     <div id="about">
       <h3>簡介</h3>
       <p>
