--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for [:admin, @admin_meetup, @admin_event] do |f| %>
   <div class="form-group">
     <%= f.input :subject, :label => "活動主題", :input_html => {:class => "form-control"} %></br>
+    <%= f.input :subject_en, :label => "英文網址", :input_html => {:class => "form-control"} %></br>
     <%= f.input :content, :label => "內容", :input_html => {:class => "form-control"} %></br>
     <%= f.input :date, :label => "時間", :input_html => {:class => "form-control"} %></br>
     <%= f.input :place, :label => "地點", :input_html => {:class => "form-control"} %></br>
