--- a/app/views/admin/meetups/_form.html.erb
+++ b/app/views/admin/meetups/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for [:admin, @admin_meetup] do |f| %>
   <div class="form-group">
     <%= f.input :title, :label => "聚會名稱", :input_html => {:class => "form-control"} %></br>
+    <%= f.input :title_en, :label => "英文網址", :input_html => {:class => "form-control"} %></br>
     <%= f.input :subtitle, :label => "副標", :input_html => {:class => "form-control"} %></br>
     <%= f.input :category_id, as: :select, :label => "分類", collection: @categories, promt: "請選擇聚會分類", include_blank: "請選擇聚會分類", :input_html => {:class => "form-control"} %></br>
     <%= f.input :description, :label => "簡介", :input_html => {:class => "form-control"} %></br>
