--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center"><%= @admin_meetup.title %>的活動</h1>
+<h1 class="text-center"><%= link_to @admin_meetup.title, admin_meetups_path %>的活動</h1>
 <div class="row">
   <br/>
   <br/>
