--- a/app/views/admin/meetups/index.html.erb
+++ b/app/views/admin/meetups/index.html.erb
@@ -13,7 +13,10 @@
             <div class="caption">
               <h3><%= meetup.title %></h3>
               <p><%= meetup.subtitle %></p>
-              <p><%= meetup.day %></p>
+              <p>
+                <%= meetup.location %>
+                <%= meetup.weekday %>
+              </p>
               <p>
                 <%= link_to "活動", admin_meetup_events_path(meetup), class: "btn btn-default" %>
                 <%= link_to "編輯", edit_admin_meetup_path(meetup), class: "btn btn-default" %>
