--- a/app/views/meetups/find.html.erb
+++ b/app/views/meetups/find.html.erb
@@ -12,7 +12,10 @@
             <div class="caption">
               <h3><%= meetup.title %></h3>
               <p><%= meetup.subtitle %></p>
-              <p><%= meetup.day %></p>
+              <p>
+                <%= meetup.location %>
+                <%= meetup.weekday %>
+              </p>
             </div>
           <% end %>
         </div>
