--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,17 +1,6 @@
-<%= form_for(@admin_category) do |f| %>
-  <% if @admin_category.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@admin_category.errors.count, "error") %> prohibited this admin_category from being saved:</h2>
-
-      <ul>
-      <% @admin_category.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="actions">
-    <%= f.submit %>
+<%= simple_form_for [:admin, @admin_category] do |f| %>
+  <div class="form-group">
+    <%= f.input :title, :label => "名稱", :input_html => {:class => "form-control"} %></br>
   </div>
+  <%= f.submit "確定", :class => "btn btn-success" %>
 <% end %>
