--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing admin_category</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Show', @admin_category %> |
-<%= link_to 'Back', admin_categories_path %>
+<h1 class="text-center">編輯分類</h1>
+<div class="row">
+  <div class="col-md-offset-4 col-md-4">
+    <%= render 'form' %>
+  </div>
+</div>
