--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,23 +1,29 @@
-<h1>Listing admin_categories</h1>
+<h1 class="text-center">分類管理</h1>
+<div class="row">
+  <div class="col-md-offset-4 col-md-4">
+    <%= link_to '新增分類', new_admin_category_path, class: "btn btn-primary pull-right" %>
+    <br/>
+    <br/>
+    <table class="table-hover">
+      <thead>
+        <tr>
+          <th colspan="3" class="text-center">名稱</th>
+          <th colspan="2"></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% @admin_categories.each do |category| %>
+          <tr>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><%= category.title %></td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><%= link_to '編輯', edit_admin_category_path(category), class: "btn btn-default" %></td>
+            <td><%= link_to '刪除', admin_category_path(category), method: :delete, data: { confirm: '確定要刪除?' }, class: "btn btn-danger" %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @admin_categories.each do |admin_category| %>
-      <tr>
-        <td><%= link_to 'Show', admin_category %></td>
-        <td><%= link_to 'Edit', edit_admin_category_path(admin_category) %></td>
-        <td><%= link_to 'Destroy', admin_category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Category', new_admin_category_path %>
+    <br>
+  </div>
+</div>
