--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,6 @@
-<h1>New admin_category</h1>
-
-<%= render 'form' %>
-
-<%= link_to 'Back', admin_categories_path %>
+<h1 class="text-center">新增分類</h1>
+<div class="row">
+  <div class="col-md-offset-4 col-md-4">
+    <%= render 'form' %>
+  </div>
+</div>
