--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,23 +1,26 @@
-<h1>Listing categories</h1>
+<h1 class="text-center">分類管理</h1>
+<div class="row">
+  <div class="col-md-offset-2 col-md-8">
+    <%= link_to 'New Category', new_category_path %>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <table class="table-hover">
+      <thead>
+        <tr>
+          <th colspan="3"></th>
+        </tr>
+      </thead>
 
-  <tbody>
-    <% @categories.each do |category| %>
-      <tr>
-        <td><%= link_to 'Show', category %></td>
-        <td><%= link_to 'Edit', edit_category_path(category) %></td>
-        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @categories.each do |category| %>
+          <tr>
+            <td><%= link_to 'Show', category %></td>
+            <td><%= link_to 'Edit', edit_category_path(category) %></td>
+            <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
 
-<br>
-
-<%= link_to 'New Category', new_category_path %>
+    <br>
+  </div>
+</div>
