--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -15,7 +15,7 @@
               <p>
                 <%= link_to "活動", admin_meetup_events_path(meetup), class: "btn btn-default" %>
                 <%= link_to "編輯", edit_admin_meetup_path(meetup), class: "btn btn-default" %>
-                <%= link_to "刪除", admin_meetup_path(meetup), class: "btn btn-danger", method: "delete", data: {confirm: "確認刪除?"} %> 
+                <%= link_to "刪除", admin_meetup_path(meetup), class: "btn btn-danger", method: "delete", data: {confirm: "確定要刪除?"} %> 
               </p>
             </div>
           <% end %>
