--- a/app/views/admin/meetups/_form.html.erb
+++ b/app/views/admin/meetups/_form.html.erb
@@ -1,11 +1,11 @@
 <%= simple_form_for [:admin, @admin_meetup] do |f| %>
   <div class="form-group">
     <%= f.input :title, :label => "聚會名稱", :input_html => {:class => "form-control"} %></br>
-    <%= f.input :title_en, :label => "英文網址", :input_html => {:class => "form-control"} %></br>
+    <%= f.input :title_en, :label => "英文縮寫", :input_html => {:class => "form-control"} %></br>
     <%= f.input :subtitle, :label => "副標", :input_html => {:class => "form-control"} %></br>
     <%= f.input :category_id, as: :select, :label => "分類", collection: @categories, promt: "請選擇聚會分類", include_blank: "請選擇聚會分類", :input_html => {:class => "form-control"} %></br>
-    <%= f.input :description, :label => "簡介", :input_html => {:class => "form-control"} %></br>
-    <%= f.input :location, :label => "所在地", :input_html => {:class => "form-control"} %></br>
+    <%= f.input :description, :label => "簡介", :input_html => {:class => "form-control", :style => "height: 200px;"} %></br>
+    <%= f.input :location, as: :select, collection: [["台北", "台北"], ["新北", "新北"], ["桃園", "桃園"], ["新竹", "新竹"], ["苗栗", "苗栗"], ["台中", "台中"]], promt: "請選擇所在地", include_blank: "請選擇所在地", :label => "所在地", :input_html => {:class => "form-control"} %></br>
     <%= f.input :day, as: :select, collection: [["星期一", 1], ["星期二", 2], ["星期三", 3], ["星期四", 4], ["星期五", 5], ["星期六", 6], ["星期日", 7]], promt: "請選擇例行日", include_blank: "請選擇例行日", :label => "例行日", :input_html => {:class => "form-control"} %></br>
     <%= f.input :called, :label => "參加者別稱", :input_html => {:class => "form-control"} %></br>
     <%= f.input :cover, :label => "封面圖片", as: :file %>
