--- a/app/views/meetups/find.html.erb
+++ b/app/views/meetups/find.html.erb
@@ -4,17 +4,18 @@
   <br/>
   <br/>
   <div class="col-md-offset-1 col-md-10">
-    <% @meetups.each do |meetup| %>
+    <% @meetups.each_with_index do |meetup, index| %>
       <div class="col-sm-6 col-md-4">
         <div class="thumbnail">
           <%= link_to meetup_path(meetup) do %>
             <%= image_tag meetup.cover.url %>
             <div class="caption">
               <h3><%= meetup.title %></h3>
-              <p><%= meetup.subtitle %></p>
+              <p style="height: 15px;"><%= meetup.subtitle %></p>
               <p>
                 <%= meetup.location %>
                 <%= meetup.weekday %>
+                <%= @member_counts[index].to_s + "名" + meetup.called %>
               </p>
             </div>
           <% end %>
