--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -45,7 +45,7 @@
     <div id="note">
       <h3 class="text-center">筆記</h3>
       <% if @note %>
-        <iframe width="100%" height="600px" src="<%= @note.link %>" sandbox></iframe>
+        <iframe width="100%" height="600px" src="<%= @note.link %>" sandbox="allow-scripts allow-forms allow-same-origin" ></iframe>
       <% else %>
         <% if @is_attendee&&@is_attendee.is_owner %>
           <%= link_to "建立筆記", open_new_file_admin_meetup_event_path(@meetup, @event), class: "btn btn-primary" %>
