--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -35,8 +35,8 @@
     </div>
     <div id="member">
       <h3 class="text-center">成員</h3>
-      <% if @is_member.is_owner %>
-      <%= link_to "新增活動", new_admin_meetup_event_path(@meetup), class: "btn btn-primary pull-right" %>
+      <% if current_user&&@is_member.is_owner %>
+        <%= link_to "新增活動", new_admin_meetup_event_path(@meetup), class: "btn btn-primary pull-right" %>
       <br/>
       <br/>
       <% end %>
