add col to event & note

--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -60,6 +60,7 @@
                   <%= event.date.strftime('%Y/%m/%d %H:%M') %><br/>
                   <%= event.place %>
                   <%= event.price %>
+                  <%= event.size %>個名額
                 </p>
               </div>
             <% end %>
