--- a/app/views/admin/events/_form.html.erb
+++ b/app/views/admin/events/_form.html.erb
@@ -5,6 +5,7 @@
     <%= f.input :content, :label => "內容", :input_html => {:class => "form-control"} %></br>
     <%= f.input :date, :label => "時間", :input_html => {:class => "form-control"} %></br>
     <%= f.input :place, :label => "地點", :input_html => {:class => "form-control"} %></br>
+    <%= f.input :size, :label => "人數", :input_html => {:class => "form-control"} %></br>
     <%= f.input :price, :label => "入場費", :input_html => {:class => "form-control"} %></br>
   </div>
   <%= f.submit "確定", :class => "btn btn-success" %>
