--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -5,7 +5,8 @@
     <div class="col-md-offset-3 col-md-6 text-center">
       <%= @event.date.strftime('%Y/%m/%d %H:%M') %>&nbsp;
       <%= @event.place %>&nbsp;
-      <%= @event.price %>
+      <%= @event.price %>&nbsp;
+      <%= @event.size %>個名額
     </div>
     <br/>
     <br/>
@@ -45,7 +46,8 @@
     <div id="note">
       <h3 class="text-center">筆記</h3>
       <% if @note %>
-        <iframe width="100%" height="600px" src="<%= @note.link %>" sandbox="allow-scripts allow-forms allow-same-origin" ></iframe>
+        <%= link_to "編輯", @note.edit_link, class: "btn btn-primary" %>
+        <iframe width="100%" height="600px" src="<%= @note.view_link %>" sandbox="allow-scripts allow-forms allow-same-origin" ></iframe>
       <% else %>
         <% if @is_attendee&&@is_attendee.is_owner %>
           <%= link_to "建立筆記", open_new_file_admin_meetup_event_path(@meetup, @event), class: "btn btn-primary" %>
