--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,12 +16,14 @@
       <a href="#note" class="btn btn-default">筆記</a>
       <a href="#photo" class="btn btn-default">照片</a>
     
-      <% if @is_attendee&&current_user %>
-        <% if @is_attendee.is_owner %>
+      <% if current_user %>
+        <% if @event.is_owned?(current_user) %>
           <span class="pull-right">您是此活動召集人</span>
-        <% else %>
+        <% elsif @event.is_attendee?(current_user) %>
           <%= link_to "退出活動", remove_admin_meetup_path(@meetup), class: "btn btn-danger pull-right" %>
           <span class="pull-right">您已參加此活動</span>
+        <% else %>
+          <%= link_to "參加活動", add_admin_meetup_event_path(@meetup, @event), class: "btn btn-primary pull-right" %>
         <% end %>
       <% else %>
         <%= link_to "參加活動", add_admin_meetup_event_path(@meetup, @event), class: "btn btn-primary pull-right" %>
@@ -46,10 +48,12 @@
     <div id="note">
       <h3 class="text-center">筆記</h3>
       <% if @note %>
-        <%= link_to "編輯", @note.edit_link, class: "btn btn-primary" %>
+        <% if current_user&&@event.is_attendee?(current_user) %>
+          <%= link_to "編輯", @note.edit_link, class: "btn btn-primary" %>
+        <% end %>
         <iframe width="100%" height="600px" src="<%= @note.view_link %>" sandbox="allow-scripts allow-forms allow-same-origin" ></iframe>
       <% else %>
-        <% if @is_attendee&&@is_attendee.is_owner %>
+        <% if current_user&&@event.is_owned?(current_user) %>
           <%= link_to "建立筆記", open_new_file_admin_meetup_event_path(@meetup, @event), class: "btn btn-primary" %>
         <% end %>
       <% end %>
