--- a/app/views/pages/info.html.erb
+++ b/app/views/pages/info.html.erb
@@ -1,3 +1,4 @@
+<h1 class="text-center">使用者資訊</h1>
 <div class="row">
   <div class="col-md-offset-4 col-md-4">
     <div class="col-md-6">
@@ -5,6 +6,7 @@
     </div>
     <div class="col-md-6">
       <%= @user.name %><br/>
+      <%= @user.uid %><br/>
       <%= @user.email %>
     </div>
   </div>
