--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -14,7 +14,7 @@
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="active"><%= link_to "找聚會", find_meetup_path(0) %></li>
+        <li class="active"><%= link_to "找聚會", find_meetup_path("all") %></li>
         <li><%= link_to "辦聚會", new_admin_meetup_path %></li>
         <!--
         <li class="dropdown">
