--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,6 +1,7 @@
 <%= simple_form_for [:admin, @admin_category] do |f| %>
   <div class="form-group">
     <%= f.input :title, :label => "名稱", :input_html => {:class => "form-control"} %></br>
+    <%= f.input :title_en, :label => "英文縮寫", :input_html => {:class => "form-control"} %></br>
   </div>
   <%= f.submit "確定", :class => "btn btn-success" %>
 <% end %>
