--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -7,15 +7,17 @@
     <table class="table-hover">
       <thead>
         <tr>
-          <th colspan="3" class="text-center">名稱</th>
+          <th colspan="2">名稱</th>
+          <th colspan="2">英文縮寫</th>
           <th colspan="2"></th>
         </tr>
       </thead>
       <tbody>
         <% @admin_categories.each do |category| %>
           <tr>
-            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
             <td><%= category.title %></td>
+            <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
+            <td><%= category.title_en %></td>
             <td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</td>
             <td><%= link_to '編輯', edit_admin_category_path(category), class: "btn btn-default" %></td>
             <td><%= link_to '刪除', admin_category_path(category), method: :delete, data: { confirm: '確定要刪除?' }, class: "btn btn-danger" %></td>
