--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -11,7 +11,12 @@
           <%= link_to meetup_event_path(@admin_meetup, event) do %>
             <div class="caption">
               <h3><%= event.subject %></h3>
-              <p><%= event.date %></p>
+              <p>
+                <%= event.date.strftime('%Y/%m/%d %H:%M') %>
+                <%= event.place %>
+                <%= event.price %><br/>
+                <%= event.available %>個名額
+              </p>
               <p>
                 <%= link_to "編輯", edit_admin_meetup_event_path(@admin_meetup, event), class: "btn btn-default" %>
                 <%= link_to "刪除", admin_meetup_event_path(@admin_meetup, event), class: "btn btn-danger", method: "delete", data: {confirm: "確認刪除?"} %> 
