--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,10 +2,13 @@
 <html>
 <head>
   <title>HowToMeet 好聚</title>
+  <link rel="shortcut icon" href="/images/favicon.ico"/>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-  <link rel="shortcut icon" href="/images/favicon.ico"/>
+  <% if content_for?(:head) %>
+    <%= yield(:head) %>
+  <% end %>  
 </head>
 <body>
 <div class="container-fluid">
