--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -1,3 +1,10 @@
+<% content_for :head do %>
+  <meta property="og:image" content="<%= @meetup.cover.url %>" >
+  <meta property="og:url" content="http://www.adjudge.com" /> 
+  <meta property="og:title" content="Ads Worth Spreading" />
+  <meta property="og:description" content="Ad Judge" />
+<% end %>
+
 <h1 class="text-center"><%= @meetup.title %></h1>
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
