--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,8 +1,8 @@
 <% content_for :head do %>
   <meta property="og:image" content="<%= @meetup.cover.url %>" >
-  <meta property="og:url" content="http://www.adjudge.com" /> 
-  <meta property="og:title" content="Ads Worth Spreading" />
-  <meta property="og:description" content="Ad Judge" />
+  <meta property="og:url" content="http://howtomeet.herokuapp.com" /> 
+  <meta property="og:title" content="<%= @event.subject %>" />
+  <meta property="og:description" content="<%= @event.content %>" />
 <% end %>
 
 <h1 class="text-center"><%= @event.subject %></h1>
