modify fb og tag

--- a/app/views/meetups/show.html.erb
+++ b/app/views/meetups/show.html.erb
@@ -1,6 +1,6 @@
 <% content_for :head do %>
   <meta property="og:image" content="<%= @meetup.cover.url %>" >
-  <meta property="og:url" content="http://howtomeet.herokuapp.com" /> 
+  <meta property="og:url" content="https://howtomeet.herokuapp.com" /> 
   <meta property="og:title" content="<%= @meetup.title %>" />
   <meta property="og:description" content="<%= @meetup.description %>" />
 <% end %>
